# behavior-inference-v2

./: .gitignore  .isort.cfg  README.md
scripts/: build.sh  cli.utils.sh  debug.launch.sh  helper.sh  main.utils.py
src/rt_bi_behavior/: package.xml  setup.cfg  setup.py
src/rt_bi_behavior/config/: ba.yaml
src/rt_bi_behavior/launch/: ba.launch.py  flaskApp.py  graphviz.html
src/rt_bi_behavior/rt_bi_behavior/: BaNode.py
src/rt_bi_behavior/rt_bi_behavior/Model/: BehaviorAutomaton.py  BehaviorIGraph.py  PropositionalBA.py  State.py  Transition.py  __init__.py
src/rt_bi_commons/: package.xml  setup.cfg  setup.py
src/rt_bi_commons/rt_bi_commons/Base/: ColdStartableNode.py  DataDictionaryNode.py  RtBiNode.py  TransitionParser.py
src/rt_bi_commons/rt_bi_commons/RosParamParsers/: AtomicParsers.py  JsonParser.py  ParamParser.py  ReferenceParser.py
src/rt_bi_commons/rt_bi_commons/Shared/: Color.py  MinQueue.py  NodeId.py  Pose.py  Predicates.py  __init__.py
src/rt_bi_commons/rt_bi_commons/Utils/: Geometry.py  Msgs.py  NetworkX.py  RViz.py  Ros.py  RtBiInterfaces.py
src/rt_bi_core/: package.xml  setup.cfg  setup.py
src/rt_bi_core/rt_bi_core/: RegionsSubscriber.py  __init__.py
src/rt_bi_core/rt_bi_core/Spatial/: AffinePolygon.py  AffinePolygonBase.py  ContinuousTimePolygon.py  DynamicPolygon.py  Polygon.py  SensingPolygon.py  StaticPolygon.py  TargetPolygon.py  (+2 more)
src/rt_bi_emulator/: package.xml  setup.cfg  setup.py
src/rt_bi_emulator/config/: avs.yaml  kns.yaml  rviz.live.rviz  targets.yaml
src/rt_bi_emulator/launch/: known.launch.py  map.launch.py  rviz.launch.py  sensor.launch.py  target.launch.py
src/rt_bi_emulator/rt_bi_emulator/Emulators/: AffineRegionEmulator.py  KnownRegionEmulator.py  MapEmulator.py  SensorEmulator.py  TargetEmulator.py
src/rt_bi_emulator/rt_bi_emulator/Renderers/: MapRenderer.py  SensorRenderer.py  TargetRenderer.py
src/rt_bi_eventifier/: package.xml  setup.cfg  setup.py
src/rt_bi_eventifier/config/: ev.yaml  rviz.cgr.rviz  rviz.ctcd.rviz  rviz.igr.0.rviz  rviz.igr.1.rviz  rviz.igr.2.rviz  rviz.igr.rviz  rviz.igr.z.rviz
src/rt_bi_eventifier/launch/: ev.launch.py  rviz.launch.py
src/rt_bi_eventifier/rt_bi_eventifier/: Eventifier.py
src/rt_bi_eventifier/rt_bi_eventifier/Model/: ConnectivityGraph.py  ContinuousTimeCollisionDetection.py  EventAggregator.py  MetricIGraph.py  __init__.py
src/rt_bi_interfaces/: CMakeLists.txt  package.xml
src/rt_bi_interfaces/msg/: ColdStart.msg  DataRefRequest.msg  IGraph.msg  Isomorphism.msg  Polygon.msg  Predicate.msg  RegularSet.msg  RegularSetArray.msg  TimeInterval.msg  Tracklet.msg
src/rt_bi_interfaces/srv/: DataReference.srv  SpaceTime.srv
src/rt_bi_runtime/: package.xml  setup.cfg  setup.py
src/rt_bi_runtime/config/: rdf.yaml
src/rt_bi_runtime/launch/: all.launch.py
src/rt_bi_runtime/rdf/: tower_bridge.ttl  transition.lark
src/rt_bi_runtime/rt_bi_runtime/: ColdStartManager.py  RdfStoreNode.py  __init__.py
src/rt_bi_runtime/sparql/: channel.rq  example.rq  geometry.rq  ids.rq  intervals.rq  sets.rq  var.material.rq
(+3 files in other folders)
