<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>rt_bi_commons</name>
	<version>0.9.0</version>
	<description>Common classes, objects, and functions shared among components in rt_bi_* packages.</description>
	<maintainer email="reza.teshnizi@gmail.com">Reza Teshnizi</maintainer>
	<license>UNLICENSED</license>

	<depend>rclpy</depend>
	<depend>geometry_msgs</depend>
	<depend>visualization_msgs</depend>

	<depend version_eq="0.9.0">rt_bi_interfaces</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
