<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>rt_bi_emulator</name>
	<version>0.9.0</version>
	<description>A package to emulate a live scenario for debugging of the BI project.</description>
	<maintainer email="reza.teshnizi@gmail.com">Reza Teshnizi</maintainer>
	<license>UNLICENSED</license>

	<depend>rclpy</depend>

	<depend version_eq="0.9.0">rt_bi_commons</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
